--- a/tests/add.yml
+++ b/tests/add.yml
@@ -1,8 +1,12 @@
-name: Add Result Test
+name: Add Register Encoding T1
 given:
   r0: -1
   r1: 1
 when: |
-  add r1, r0
+  add r2, r1, r0
 then:
-  r1: 0
+  r2: 0
+  r1: 1
+  r0: 0xFFFFFFFF
+  z: 1
+  c: 1
